<resources>
    <string name="app_name">WordScrambler</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_scramble">Scramble</string>
    <string name="button_copy">Copy</string>
    <string name="button_clear">Clear</string>
    <string name="top_message">Scramble a message by randomizing the letters btw first and last. HAVE FUN!</string>
    <string name="button_send">Send</string>
    <string name="phone_num">Enter a phone number</string>
    <string name="test_end_point">https://dry-escarpment-29044.herokuapp.com/</string>
    <string name="phone_num_hint">(x-xxx-xxx-xxxx)</string>
</resources>
