<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mytest.wordscrambler.MainActivity">

    <Button
        android:id="@+id/scrambleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:onClick="scrambleMessage"
        android:text="@string/button_scramble"
        app:layout_constraintBaseline_toBaselineOf="@+id/copyButton"
        app:layout_constraintEnd_toStartOf="@+id/copyButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/copyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="copyMessage"
        android:text="@string/button_copy"
        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
        app:layout_constraintEnd_toStartOf="@+id/clearButton"
        app:layout_constraintStart_toEndOf="@+id/scrambleButton" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:onClick="clearMessage"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/copyButton" />

    <EditText
        android:id="@+id/textMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/copyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/top_message"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
